--- a/Twitter/app/src/main/AndroidManifest.xml
+++ b/Twitter/app/src/main/AndroidManifest.xml
@@ -18,6 +18,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".UserTimeLineActivity"/>
+        <meta-data
+            android:name="io.fabric.ApiKey"
+            android:value="897e8792658c35014938770fddaa7985d3532923" />
     </application>
 
+    <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
